Fix build with new Mud version

--- a/src/Ui/Website/Website.csproj
+++ b/src/Ui/Website/Website.csproj
@@ -33,8 +33,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation"
                       Version="11.11.0" />
-    <PackageReference Include="MudBlazor"
-                      Version="6.17.0" />
+    <PackageReference Include="MudBlazor" Version="8.2.0" />
     <PackageReference Include="Newtonsoft.Json"
                       Version="13.0.3" />
     <PackageReference Include="Nito.AsyncEx"
